Fixed nowrap for images and paragraphs

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ section {
 .vp-wrapper {
     overflow-x: scroll;
     width: 100%;
+    white-space: nowrap;
 }
 
 .vp-photo-wrapper {
@@ -103,6 +104,7 @@ section {
     background-color: rgba(51, 89, 50, 0.79);
     width: 100%;
     height: 100%;
+    white-space: normal;
 }
 
 .vp-photo {
